<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/backbutton"/>

    <ImageView
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_marginStart="280dp"
        android:src="@drawable/logo1"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="50dp"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/hi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginStart="55dp"
        android:textSize="15sp"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/i_m_waiting_for_you_please_enter_your_detail"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="70dp"
        android:textSize="15sp"
        android:textColor="@color/cardview_shadow_start_color"
        android:hint="@string/username_email_or_phone_number"/>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:id="@+id/showPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="70dp"
        android:textColor="@color/cardview_shadow_start_color"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="70dp"
        android:textSize="15sp"
        android:textColor="@color/cardview_shadow_start_color"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="460dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="463dp"
        android:layout_marginStart="82dp"
        android:textSize="15sp"
        android:text="@string/remember_me"/>

    <EditText
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="463dp"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="50dp"
        android:textSize="15sp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"/>



    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="500dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/log_in" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:layout_marginStart="90dp"
        android:textSize="15sp"
        android:text="@string/don_t_have_an_account"/>

    <EditText
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:layout_marginStart="251dp"
        android:textSize="15sp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up" />


</RelativeLayout>